Added quote, call to action and footer elements with styles

--- a/style.css
+++ b/style.css
@@ -90,3 +90,44 @@ td {
     text-align: center;
     width: 10rem;
 }
+
+#quote-section {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 6rem 4rem 6rem;
+    align-items: center;
+    background-color: #e5e7eb;
+}
+
+#quote-section q {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 100;
+}
+
+#call-to-action-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 1rem 3rem 2rem 3rem;
+    margin: 4rem;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 8px;
+}
+
+#call-to-action-section button {
+    border: 1px solid;
+    border-color: #e5e7eb;
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background-color: #1f2937;
+    align-content: center;
+    color: #e5e7eb;
+}
