--- a/pages/backend/style.css
+++ b/pages/backend/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
 header {
     display: flex;
     flex-direction: row;
@@ -6,6 +11,7 @@ header {
     padding-right: 2rem;
     background-color: #1f2937;
     align-content: center;
+    margin: 0;
 }
 
 nav {
@@ -36,4 +42,5 @@ footer {
     background-color: #1f2937;
     align-content: center;
     color: #e5e7eb;
+    margin: 0;
 }
