--- a/pages/backend/style.css
+++ b/pages/backend/style.css
@@ -45,35 +45,46 @@ footer {
     margin: 0;
 }
 
-
+picture {
+    padding: 0px;
+}
 #introduction-section {
     display: flex;
-    flex-direction: row;
-    padding: 2rem 6rem 4rem 6rem;
+    flex-direction: column;
+    padding: 2rem 4rem 2rem 4rem;
     background-color: #e5e7eb;
     margin-top: 3rem;
+    align-items: center;
 }
+
+video {
+    object-fit: fill;
+    position: relative;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
 
 .image-introduction {
-    width: 36rem;
-    margin-left: 8rem;
-    margin-top: 2.3rem;
+    width: 60%;
+    height: 80%;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
-.webdesign-main-text {
+.backend-main-text {
     font-size: 48px;
     font-weight: 700;
     color: #1f2937;
-    margin-left: 16rem;
     margin-top: 2.4rem;
+    text-align: center;
 }
 
-#webdesign-text {
+#backend-text {
     text-align: center;
-    margin-left: 6rem;
-    margin-top: 3rem;
-    height: 20rem;
-    width: 20rem;
+    padding: 1rem;
     color: #e5e7eb;
     font-size: 18px;
 }
@@ -81,8 +92,7 @@ footer {
 #whylearn-text {
     text-align: center;
     color: #e5e7eb;
-    font-size: 1.7rem;
-    margin-left: 6rem;
+    font-size: 24px;
     margin-top: 2rem;
 }
 
@@ -90,22 +100,45 @@ footer {
     background-color: #1f2937;
     width: 70rem;
     height: 25rem;
-    margin-left: 7rem;
+    padding: 1rem;
+    align-self: center;
     display: flex;
 }
 
-#motivate-text {
-    padding: 1rem 3.7rem;
-    color: white;
-    background: linear-gradient(to left, salmon 50%, rgb(173, 182, 187) 50%) right;
-    background-size: 200%;
-    transition: .5s ease-out;
-    font-size: 30px;
+#explore-section {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 4rem 2rem 4rem;
+    align-items: center;
+}
+
+#course-section-header {
+    font-size: 28px;
+    font-weight: 800;
+    color: #ffffff;
+    margin-bottom: 2rem;
+    background-color: #1f2937;
+    width: 100%;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     text-align: center;
 }
 
-#motivate-text:hover {
-    background-position: left;
+#course-section-text {
+    padding: 1rem;
+    color: #1f2937;
+    font-size: 18px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+table {
+    border-collapse: separate;
+    border-spacing: 3rem;
+}
+
+td {
+    text-align: center;
+    width: 10rem;
 }
 
 .card {
@@ -124,6 +157,7 @@ footer {
 
 .card>img {
     border-radius: 5px 5px 0 0;
+    margin-top: 1rem;
     height: 150px;
     width: 100%;
     object-fit: contain;
@@ -159,9 +193,8 @@ footer {
 #course-section {
     display: flex;
     flex-direction: column;
-    padding: 2rem 6rem 4rem 6rem;
+    padding: 2rem 4rem 2rem 4rem;
     align-items: center;
-    margin-top: 7rem;
 }
 
 #links-section {
