--- a/pages/webDesign/style.css
+++ b/pages/webDesign/style.css
@@ -11,6 +11,7 @@ header {
     padding-right: 2rem;
     background-color: #1f2937;
     align-content: center;
+    margin: 0;
 }
 
 nav {
@@ -93,12 +94,14 @@ footer {
 }
 
 #motivate-text {
-    padding: 1rem 3.7rem;
     color: white;
     background: linear-gradient(to left, salmon 50%, rgb(173, 182, 187) 50%) right;
     background-size: 200%;
     transition: .5s ease-out;
-    font-size: 30px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 28px;
+    font-weight: 800;
     text-align: center;
 }
 
@@ -170,6 +173,16 @@ footer {
     margin-top: 2rem;
 }
 
+table {
+    border-collapse: separate;
+    border-spacing: 3rem;
+}
+
+td {
+    text-align: center;
+    width: 10rem;
+}
+
 .flip-card {
     background-color: transparent;
     width: 150px;
@@ -205,7 +218,7 @@ footer {
 }
   
 .flip-card-back {
-    background-color:  #e5e7eb;
+    background-color: #e5e7eb;
     color: #1f2937;
     transform: rotateY(180deg);
 }
