Fixed inconsistencies between pages

--- a/pages/frontend/style.css
+++ b/pages/frontend/style.css
@@ -32,6 +32,7 @@ nav a:hover{
 .logo-image {
     width: 5rem;
     height: 5rem;
+    margin-right: 15rem;
 }
 #about-frontend {
     display: flex;
