--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ nav {
 nav a {
     font-size: 18px;
     color: #e5e7eb;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    padding: 1rem;
 }
 
 .logo-image {
