--- a/pages/backend/style.css
+++ b/pages/backend/style.css
@@ -24,13 +24,17 @@ nav {
 nav a {
     font-size: 18px;
     color: #e5e7eb;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    padding: 1rem;
+}
+nav a:hover{
+    background-color: #364354;
+    text-decoration: underline;
 }
 
 .logo-image {
     width: 5rem;
     height: 5rem;
+    margin-right: 15rem;
 }
 
 footer {
