--- a/pages/contactPage/style.css
+++ b/pages/contactPage/style.css
@@ -3,11 +3,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-* {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-}
-
 header {
     display: flex;
     flex-direction: row;
@@ -60,88 +55,57 @@ nav a:hover{
     display: flex;
     flex-direction: column;
     padding: 2rem 6rem 4rem 6rem;
+    color: #f9faf8;
     align-items: center;
 }
 
 #form-section {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-#check{
-    display: inline-block;
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid;
+    border-radius: 8px;
+    border-color: #1f2937;
+    padding: 1rem;
+    margin: 2rem;
+}
+.form-header-text {
+    font-size: 48px;
+    font-weight: 700;
+    color: #1f2937;
+}
+.form-main-text {
+    font-size: 18px;
+    font-weight: 700;
+    color: #1f2937;
 }
 
-/* tag <fieldset>*/
-fieldset {
-    border: 0;
-}
-
-/* tag <body> */
 body{
     font-size: 18px;
     color: #e5e7eb;
 }
 
-/* tags <body>, <input>, <Select>, <textarea> e <button> */
 input, select, textarea, button {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #1f2937;
     margin-left: 1rem;
     margin-right: 1rem;
 }
 
-/* Elements "before" and "after" */
-.group:before, .group:after {
-    display: table;
-    border-collapse: separate;
-    border-spacing: 3rem;
-}
-
-/* Elements "after" */
-.group:after {
-    clear: both;
-}
-
-
-/* tag <label> */
-.fullname .email .choices .level label {
-    margin-bottom: 0.2em;
-    font-size: 18px;
-    color: #e5e7eb
-    display block;
-}
-
-/* tag <fieldset> */
-fieldset.group .fullname .email .choices .level {
-    float:  left;
-    margin-right: 1em;
-}
-
-/* tag <input> with text and email, tag <select> and tag <textarea>*/
-.fullname .email .choices .level input[type="text"], .fullname .email .choices .level input[type="email"], .campo select, .campo textarea {
-    padding: 0.2em;
-    border: color #e5e7eb;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
-    display: block;
-}
-
-/* with tags <select> e <option>*/
-.fullname .email .choices .level select option {
+.input-groups{
     display: flex;
-    flex-direction: column;
-    padding: 2rem 6rem 4rem 6rem;
     align-items: center;
-}
-
-/* with tags <input>, <select> and <textarea> "focus"*/
-.fullname .email .choices .level input:focus, .fullname .email .choices .level select:focus, .fullname .email .choices .level textarea:focus {
-    font-size: 36px;
-    font-weight: 700;
+    padding: 1rem;
+    font-size: 18px;
     color: #1f2937;
 }
 
-/* button */
 .button {
     font-size: 1.2em;
     background-color: #3882f6;
@@ -156,7 +120,6 @@ fieldset.group .fullname .email .choices .level {
     cursor: pointer;
 }
 
-/* button with "hover" */
 .button:hover {
     transform:scale(1.2);
     background-color: #3882f6;
@@ -164,7 +127,6 @@ fieldset.group .fullname .email .choices .level {
     text-shadow: none;
 }
 
-/* button and tag <select> */
 .button, select{
     background-color: #3882f6;
     color: #e5e7eb;
