--- a/pages/contactPage/style.css
+++ b/pages/contactPage/style.css
@@ -45,10 +45,12 @@ nav a:hover{
     background-color: #1f2937;
 }
 
-.hero-main-text {
-    font-size: 48px;
-    font-weight: 700;
-    color: #f9faf8;
+.intro-text {
+    margin-top: 2rem;
+}
+
+#intro-section div {
+    margin-left: 11rem;
 }
 
 #information-section {
@@ -75,11 +77,13 @@ form {
     padding: 1rem;
     margin: 2rem;
 }
+
 .form-header-text {
     font-size: 48px;
     font-weight: 700;
     color: #1f2937;
 }
+
 .form-main-text {
     font-size: 18px;
     font-weight: 700;
@@ -123,7 +127,7 @@ input, select, textarea, button {
 .button:hover {
     transform:scale(1.2);
     background-color: #3882f6;
-    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
+    box-shadow: inset 4px 4px 4px rgba(80, 80, 80, 0.2);
     text-shadow: none;
 }
 
@@ -139,6 +143,53 @@ input, select, textarea, button {
     padding-bottom: 0.5rem;
     cursor: pointer;
     align-items: center;
+}
+ 
+.banner-image {
+    max-width: 60%;
+    height: auto;
+}
+
+.contact-form {
+    padding: 40px 0;
+    margin: 0 10px;
+    color: #1f2937;
+}
+ 
+.form-container {
+    max-width: 40%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #e5e7eb;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+ 
+.contact-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+ 
+.form-container label {
+    display:block;
+    font-weight: bold;
+}
+
+.form-container input, textarea{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #1f2937;
+    border-radius: 4px;
+    margin-bottom: 1rem;
+    resize: vertical;
+}
+
+.input-groups.level {
+    margin-right: 4rem;
+}
+
+.intro-image {
+    margin-right: 6rem;
 }
 
 footer{
