--- a/pages/frontend/style.css
+++ b/pages/frontend/style.css
@@ -106,8 +106,8 @@ button {
     padding: 1rem 3rem 2rem 3rem;
 }
 .language-image{
-    width: 8rem;
-    height: 8rem;
+    width: 15rem;
+    height: 15rem;
 }
 .language-heading{
     margin:2rem 0 2rem 0;
@@ -128,14 +128,80 @@ button {
     align-items: center;
     background-color: #e5e7eb;
     padding: 2rem 6rem 4rem 6rem;
+    margin-top: 10rem;
     
 }
 .testimonial-text,.testimonial-alumni{ 
     font-size: 36px;
     font-weight: light;
     font-style: italic;
-    padding-top:1.5rem;
+    padding-top: 1.5rem;
 }
+
+table {
+    border-collapse: separate;
+    border-spacing: 3rem;
+}
+
+td {
+    text-align: center;
+    width: 20rem;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 15rem;
+    height: 15rem;
+    perspective: 1000px;
+}
+  
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+  
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+  
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+  
+.flip-card-front {
+    background-color: #1f2937;
+    color: black;
+}
+  
+.flip-card-back {
+    background-color: #e5e7eb;
+    color: #1f2937;
+    transform: rotateY(180deg);
+}
+
+#tech-title {
+    font-size: 28px;
+    font-weight: 800;
+    color: #1f2937;
+}
+
+#links-section {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 6rem 4rem 6rem;
+    align-items: center;
+    margin-top: 2rem;
+}
+
 footer {
     display: flex;
     flex-direction: row;
