--- a/style.css
+++ b/style.css
@@ -83,6 +83,132 @@ footer{
     color: #e5e7eb;
 }
 
+@media only screen and (min-width: 0px) {
+    /*For mobile*/
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        align-content: center;
+        margin: 0;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    nav a {
+        font-size: 10px;
+        padding: 0.5rem;
+    }
+
+    picture {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo-image {
+        width: 4rem;
+        height: 4rem;
+    }
+
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        padding-top: 2rem;
+        padding-bottom: 2rem;
+        align-content: center;
+        margin: 0;
+    }
+
+    
+    #intro-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding: 1rem 3rem 2rem 3rem;
+    }
+    
+    .hero-main-text {
+        font-size: 18px;
+    }
+    
+    #information-section {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 6rem 4rem 6rem;
+        align-items: center;
+    }
+    
+    .information-header {
+        font-size: 16px;
+    }
+    
+    .information-image {
+        width: 4rem;
+        height: 4rem;
+    }
+    
+    .intro-text {
+        font-size: 12px;
+    }
+
+    .intro-image {
+        margin-top: 4rem;
+        width: 100%;
+    }
+    
+    button {
+        margin-top: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+    
+    table {
+        border-collapse: separate;
+        border-spacing: 0.5rem;
+    }
+    
+    td {
+        text-align: center;
+        width: 6rem;
+        font-size: 12px;
+    }
+    
+    #quote-section {
+        display: flex;
+        flex-direction: column;
+        padding: 1rem 3rem 2rem 3rem;
+        align-items: center;
+    }
+    
+    #quote-section q {
+        font-size: 24px;
+    }
+    
+    #quote-author {
+        margin-left: 10rem;
+        font-weight: bold;
+    }
+    
+    #call-to-action-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 1rem 1rem 2rem 1rem;
+        margin: 4rem;
+    }
+}
+
 @media only screen and (min-width: 600px) {
     /*For tablet*/
     header {
