--- a/pages/frontend/style.css
+++ b/pages/frontend/style.css
@@ -3,56 +3,31 @@
     font-family: 'Roboto', sans-serif;
 }
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding-left: 2rem;
-    padding-right: 2rem;
     background-color: #1f2937;
-    align-content: center;
-}
-
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
 }
 
 nav a {
-    font-size: 18px;
     color: #e5e7eb;
-    padding: 1rem;
 }
 nav a:hover{
     background-color: #364354;
     text-decoration: underline;
 }
 
-.logo-image {
-    width: 5rem;
-    height: 5rem;
-    margin-right: 15rem;
-}
 #about-frontend {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 2rem 6rem 4rem 6rem;
     background-color: #1f2937;
 }
 
 .main-heading {
-    font-size: 3rem;
-    font-weight: 700;
     color: #f9faf8;
-    padding-top:2rem;
 }
-span{
+
+span {
     animation-name: languages;
     animation-duration:3.5s;
     animation-iteration-count:infinite;
 }
+
 @keyframes languages{
     0% {
         color:#00cc44;
@@ -70,12 +45,13 @@ span{
         color:#00cc44;
     }
 }
+
 .frontend-defination{
-        font-size: 18px;
         color: #e5e7eb;
         line-height: 1.3;
         padding: 2rem 0 2rem 0;
 }
+
 button {
     background-color: #3882f6;
     color: #e5e7eb;
@@ -89,52 +65,49 @@ button {
     cursor: pointer;
 }
 
-.frontend-image{
-    width: 25rem;
-    height:20rem;
-}
-#detail-section{
+#detail-section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 2rem 6rem 4rem 6rem;
     align-items: center;
 }
-.language-detail{
+
+.language-detail {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     padding: 1rem 3rem 2rem 3rem;
 }
-.language-image{
+
+.language-image {
     width: 15rem;
     height: 15rem;
 }
-.language-title{
+
+.language-title {
     margin:2rem 0 2rem 0;
 }
-.language-description{
-    font-size: 18px;
+
+.language-description {
     color: #1f2937;
     font-weight: 100;
     font-style: italic;
     line-height: 1.2;
     text-align: center;
-    
 }
+
 .language-heading {
-    font-size: 1.5rem;
     font-weight: 800;
     color: #1f2937;
     display: flex;
     justify-content: center;
     padding-top:3rem;
     
-    
-    
 }
-.testimonials{
+
+.testimonials {
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -144,18 +117,12 @@ button {
     margin-top: 10rem;
     
 }
-.testimonial-text,.testimonial-alumni{ 
-    font-size: 36px;
+
+.testimonial-text,.testimonial-alumni { 
     font-weight: light;
     font-style: italic;
     padding-top: 1.5rem;
 }
-
-
-
-
-
-
 
 footer {
     display: flex;
@@ -167,6 +134,7 @@ footer {
     align-content: center;
     color: #e5e7eb;
 }
+
 @media only screen and (min-width: 0px) {
 
     /* For Mobile: */
@@ -197,9 +165,36 @@ footer {
         flex-direction: column;
         align-items: center;
     }
+
     .logo-image {
         width: 4rem;
         height: 4rem;
+    }
+
+    .main-heading {
+        font-size: 28px;
+        font-weight: 700;
+    }
+
+    .frontend-defination {
+        font-size: 18px;
+    }
+
+    .language-description {
+        font-weight: 100;
+        font-style: italic;
+        line-height: 1.2;
+        text-align: center;
+        font-size: 14px;
+    }
+    
+
+    .language-heading {
+        font-size: 18px;
+    }
+
+    .testimonial-text,.testimonial-alumni {
+        font-size: 24px;
     }
 
     footer {
@@ -213,25 +208,29 @@ footer {
     }
 
     .frontend-image {
-        padding: 0px;
+        width: 25rem;
+        height:20rem;
+    }
+
+    #detail-section {
+        flex-direction: column;
     }
 
     #about-frontend {
         display: flex;
         flex-direction: column;
-        padding: 2rem 4rem 2rem 4rem;
-        
-        align-items: center;
+        justify-content: space-evenly;
+        padding: 2rem 6rem 4rem 6rem;
+        background-color: #1f2937;
     }
-    #detail-section{
-        flex-direction: column;
-    }
-    .language-heading{
+
+    .language-heading {
         text-align: center;
         font-size: 18px;
         margin-top: 2rem;
     }
 }
+
 @media only screen and (min-width: 600px) {
 
     /* For Tablet: */
@@ -257,24 +256,50 @@ footer {
         padding: 1rem;
     }
 
+    picture {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .logo-image {
         width: 5rem;
         height: 5rem;
         margin-right: 5rem;
     }
-    .frontend-image {
-        padding: 0px;
+
+    #about-frontend {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 2rem 6rem 4rem 6rem;
+        background-color: #1f2937;
     }
 
-    #detail-section {
-        display: flex;
-        flex-direction: column;
-        padding: 2rem 4rem 2rem 4rem;
-       
-        align-items: center;
+    .main-heading {
+        font-size: 48px;
+        font-weight: 700;
+        margin-top: 2.4rem;
     }
-    .testimonials{
+
+    .frontend-defination {
+        font-size: 18px;
+    }
+
+    .language-heading {
+        font-size: 18px;
+    }
+
+    .testimonial-text,.testimonial-alumni {
+        font-size: 28px;
+    }
+
+    .language-description {
+        font-weight: 100;
+        font-style: italic;
+        line-height: 1.2;
         text-align: center;
+        font-size: 18px;
     }
 
     footer {
@@ -287,8 +312,29 @@ footer {
         margin: 0;
     }
 
-    
+    .frontend-image {
+        width: 35rem;
+        height:30rem;
+    }
+
+    #about-frontend {
+        display: flex;
+        flex-direction: column;
+        padding: 2rem 4rem 2rem 4rem;
+        align-items: center;
+    }
+
+    #detail-section {
+        flex-direction: column;
+    }
+
+    .language-heading {
+        text-align: center;
+        font-size: 18px;
+        margin-top: 2rem;
+    }
 }
+
 @media only screen and (min-width: 768px) {
 
     /* For desktop: */
@@ -312,6 +358,13 @@ footer {
     nav a {
         font-size: 18px;
         padding: 1rem;
+    }
+
+    #about-frontend {
+        display: flex;
+        flex-direction: row;
+        padding: 2rem 4rem 2rem 4rem;
+        align-items: center;
     }
 
     .logo-image {
@@ -340,5 +393,15 @@ footer {
         padding: 2rem 4rem 2rem 4rem;
         margin-top: 3rem;
         align-items: center;
+    }
+
+    .language-heading {
+        text-align: center;
+        font-size: 28px;
+        margin-top: 2rem;
+    }
+
+    .testimonial-text,.testimonial-alumni {
+        font-size: 34px;
     }
 }
