--- a/pages/contactPage/style.css
+++ b/pages/contactPage/style.css
@@ -7,8 +7,6 @@ header {
     background-color: #1f2937;
 }
 
-
-
 nav a {
     color: #e5e7eb;
 }
@@ -23,11 +21,9 @@ nav a:hover {
     background-color: #1f2937;
 }
 
-
 #information-section {
     color: #f9faf8;
 }
-
 
 form {
     border-color: #1f2937;
@@ -90,7 +86,6 @@ select {
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-
 
 .form-container input,
 textarea {
@@ -284,7 +279,6 @@ footer {
         margin-right: 0rem;
         width: 22rem;
     }
-
 }
 
 @media only screen and (min-width: 600px) {
@@ -462,6 +456,9 @@ footer {
         width: 22rem;
     }
 
+    #robbu-whatsapp-button {
+        margin-right: 2rem;
+    }
 }
 
 @media only screen and (min-width: 768px) {
