--- a/pages/contactPage/style.css
+++ b/pages/contactPage/style.css
@@ -100,7 +100,7 @@ footer {
 
 @media only screen and (min-width: 0px) {
 
-    /* For desktop: */
+    /* For mobile: */
     header {
         display: flex;
         flex-direction: column;
@@ -128,6 +128,7 @@ footer {
         flex-direction: column;
         align-items: center;
     }
+
     .logo-image {
         width: 4rem;
         height: 4rem;
