--- a/pages/webDesign/style.css
+++ b/pages/webDesign/style.css
@@ -7,6 +7,10 @@ header {
     background-color: #1f2937;
 }
 
+body {
+    background-color: rgb(169, 214, 200);
+}
+
 nav a {
     color: #e5e7eb;
 }
@@ -21,20 +25,66 @@ footer {
     color: #e5e7eb;
 }
 
-#introduction-section {
-    background-color: #e5e7eb;
+.text-header {
+    display: flex;
+    flex-direction: row;
 }
+
+#introduction-section {
+    background-color:  rgb(169, 214, 200);
+}
+
+.imagination-text {
+    font-weight: bold;
+    -webkit-animation: colorchange 20s infinite alternate;
+}
+
+@-webkit-keyframes colorchange {
+    0% {
+      color: rgb(23, 23, 60);
+    }
+    10% {
+      color: #6f1397;
+    }
+    20% {
+      color: #ffffff;
+    }
+    30% {
+      color: #ed6639;
+    }
+    40% {
+      color: rgb(68, 68, 125);
+    }
+    50% {
+      color: #4988c7;
+    }
+    60% {
+      color: rgb(184, 184, 190);
+    }
+    70% {
+      color: #42284b;
+    }
+    80% {
+      color: #d6b52e;
+    }
+    90% {
+      color: #304c5e;
+    }
+    100% {
+      color: rgb(231, 135, 103);
+    }
+  }
 
 .webdesign-main-text {
     color: #1f2937;
 }
 
 #webdesign-text {
-    color: #e5e7eb;
+    color: rgb(169, 214, 200);
 }
 
 #whylearn-text {
-    color: #e5e7eb;
+    color: rgb(169, 214, 200);
 }
 
 .image-link {
@@ -43,7 +93,7 @@ footer {
 
 #motivate-text {
     color: white;
-    background: linear-gradient(to left, salmon 50%, rgb(173, 182, 187) 50%) right;
+    background: linear-gradient(to left, salmon 50%, rgb(169, 214, 200) 50%) right;
 }
 
 #motivate-text:hover {
@@ -51,6 +101,12 @@ footer {
 }
 
 .card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease-in-out;
+    background-color: #fff;
+}
+
+.card-expl {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: box-shadow 0.3s ease-in-out;
     background-color: #fff;
@@ -364,71 +420,102 @@ footer {
         align-items: center;
     }
 
-    .image-introduction {
-        width: 25rem;
-        align-items: center;
-    }
-
     .webdesign-main-text {
-        font-size: 48px;
+        font-size: 38px;
         font-weight: 700;
         margin-top: 2.4rem;
+    }
+
+    .imagination-text {
+        font-size: 38px;
+        margin-top: 2rem;
+        font-weight: bold;
+        -webkit-animation: colorchange 20s infinite alternate;
         text-align: center;
     }
 
     #webdesign-text {
         text-align: center;
-        font-size: 14px;
+        font-size: 18px;
     }
 
     #whylearn-text {
         text-align: center;
-        font-size: 18px;
+        font-size: 20px;
         margin-top: 1rem;
+    }
+
+    .text-header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .image-link {
         width: 35rem;
-        height: 30rem;
+        height: 95rem;
         padding: 1rem;
         align-self: center;
         display: flex;
         flex-direction: column;
+        margin-top: -5rem;
     }
 
     #motivate-text {
         background-size: 200%;
         padding-top: 1rem;
         padding-bottom: 1rem;
-        font-size: 18px;
+        margin-top: 0rem;
+        font-size: 28px;
         font-weight: 800;
         text-align: center;
     }
 
-    table {
-        border-collapse: separate;
-        border-spacing: 0rem;
+    .course-explanation {
+        display: flex;
+        flex-direction: column;
     }
 
-    td {
+    .tech-logo {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: -80rem;
+        width: 200px;
+        margin-left: 20rem;
+    }
+
+    .tech-logo > div {
+        margin: 10px;
         text-align: center;
-        width: 10rem;
     }
 
     .card {
         display: flex;
         flex-direction: column;
         border-radius: 5px;
-        width: 10rem;
-        margin-top: 2rem;
+        width: 20rem;
+        margin-top: 5.5rem;
     }
 
     .card>img {
         border-radius: 5px 5px 0 0;
         margin-top: 1rem;
-        height: 150px;
+        height: 180px;
         width: 100%;
         object-fit: contain;
+    }
+
+    .card-expl {
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        width: 37rem;
+        margin-top: 5rem;
+        align-items: center;
+    }
+
+    .card-expl.numb-2 {
+        margin-top: 4.5rem;
     }
 
     .card-content {
@@ -452,9 +539,26 @@ footer {
         border-radius: 10px;
     }
 
+    .card-expl h3 {
+        font-size: 1.4rem;
+        margin-top: 0;
+    }
+
+    .card-expl p {
+        font-size: 1rem;
+        margin-bottom: 10px;
+    }
+
+    .card-expl a {
+        padding: 10px 20px;
+        text-align: center;
+        display: inline-block;
+        border-radius: 10px;
+    }
+
     #course-section {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         padding: 2rem 4rem 2rem 4rem;
         align-items: center;
     }
@@ -468,14 +572,14 @@ footer {
     }
 
     .flip-card {
-        width: 5rem;
-        height: 5rem;
+        width: 185px;
+        height: 185px;
         perspective: 1000px;
     }
 
     .logo-flip-card {
-        width: 5rem;
-        height: 5rem;
+        width: 185px;
+        height: 185px;
     }
 
     .flip-card-inner {
@@ -496,17 +600,19 @@ footer {
         height: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        font-size: 16px;
-    }
-
-    #tech-title {
         font-size: 18px;
-        font-weight: 800;
     }
 
-    .image-flip-card {
-        width:  5rem;
-        height:  5rem;
+    .down-line {
+        background-color: #1f2937;
+        padding-bottom: 0.5rem;
+        margin-top: 3rem;
+    }
+
+    .up-line {
+        background-color: #1f2937;
+        margin-top: 5rem;
+        padding-bottom: 0.5rem;
     }
 }
 
@@ -549,6 +655,7 @@ footer {
         padding-bottom: 2rem;
         align-content: center;
         margin: 0;
+        margin-top: 6rem;
     }
 
     picture {
@@ -557,7 +664,7 @@ footer {
 
     #introduction-section {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         padding: 2rem 0rem 1rem 0rem;
         margin-top: 3rem;
         align-items: center;
@@ -573,62 +680,95 @@ footer {
     .webdesign-main-text {
         font-size: 48px;
         font-weight: 700;
-        margin-top: 2.4rem;
+        margin-left: 13.5rem;
+        margin-top: 4rem;
+    }
+
+    .imagination-text {
+        font-size: 48px;
+        margin-left: -5.5rem;
+        margin-top: 8rem;
+        font-weight: bold;
+        -webkit-animation: colorchange 20s infinite alternate;
     }
 
     #webdesign-text {
         font-size: 18px;
-        margin-left: 2rem;
+        text-align: center;
     }
 
     #whylearn-text {
         font-size: 28px;
-        margin-top: 4rem;
-        margin-left: 2rem;
+        margin-top: 5rem;
+        text-align: center;
     }
 
     .image-link {
-        width: 60rem;
-        height: 30rem;
+        width: 28rem;
+        height: 100rem;
         padding: 1rem;
-        align-self: center;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        margin-left: 13.5rem;
+        margin-top: -5rem;
+        align-items: center;
     }
 
     #motivate-text {
         background-size: 200%;
         padding-top: 1rem;
         padding-bottom: 1rem;
+        margin-top: 0rem;
         font-size: 28px;
         font-weight: 800;
         text-align: center;
     }
 
-    table {
-        border-collapse: separate;
-        border-spacing: 0rem;
+    .course-explanation {
+        display: flex;
+        flex-direction: column;
     }
 
-    td {
+    .tech-logo {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: -8.7rem;
+        width: 710px;
+    }
+
+    .tech-logo > div {
+        margin: 10px;
         text-align: center;
-        width: 10rem;
     }
 
     .card {
         display: flex;
         flex-direction: column;
         border-radius: 5px;
-        width: 15rem;
-        margin-top: 2rem;
+        width: 20rem;
+        margin-top: 5.5rem;
     }
 
     .card>img {
         border-radius: 5px 5px 0 0;
         margin-top: 1rem;
-        height: 150px;
+        height: 180px;
         width: 100%;
         object-fit: contain;
+    }
+
+    .card-expl {
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        width: 37rem;
+        margin-top: 5rem;
+        align-items: center;
+    }
+
+    .card-expl.numb-2 {
+        margin-top: 4.5rem;
+
     }
 
     .card-content {
@@ -652,6 +792,22 @@ footer {
         border-radius: 10px;
     }
 
+    .card-expl h3 {
+        font-size: 1.4rem;
+        margin-top: 0;
+    }
+
+    .card-expl p {
+        font-size: 1rem;
+        margin-bottom: 10px;
+    }
+
+    .card-expl a {
+        padding: 10px 20px;
+        text-align: center;
+        display: inline-block;
+        border-radius: 10px;
+    }
 
     #course-section {
         display: flex;
@@ -669,14 +825,14 @@ footer {
     }
 
     .flip-card {
-        width: 6.5rem;
-        height: 6.5rem;
+        width: 185px;
+        height: 185px;
         perspective: 1000px;
     }
 
     .logo-flip-card {
-        width: 6.5rem;
-        height: 6.5rem;
+        width: 185px;
+        height: 185px;
     }
 
     .flip-card-inner {
@@ -697,17 +853,19 @@ footer {
         height: 100%;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        font-size: 16px;
+        font-size: 18px;
     }
 
-    #tech-title {
-        font-size: 28px;
-        font-weight: 800;
+    .down-line {
+        background-color: #1f2937;
+        padding-bottom: 0.5rem;
+        margin-top: -1rem;
     }
 
-    .image-flip-card {
-        width:  5rem;
-        height:  5rem;
+    .up-line {
+        background-color: #1f2937;
+        margin-top: 5rem;
+        padding-bottom: 0.5rem;
     }
 }
 
